fix: no wrap number of selected songs button

--- a/src/App.scss
+++ b/src/App.scss
@@ -200,3 +200,7 @@ $border-radius-lg: .3rem;
   }
 
 }
+
+.sb-no-wrap {
+  white-space: nowrap;
+}
